# capture3

./: .editorconfig  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  debug.sh  package.json  release.sh
resources/: resources.qrc
resources/icon/: icon.ai  icon.icns
resources/plist/: Info.plist.in
resources/shaders/: simple.frag  simple.vert
resources/style/: style.scss
resources/style/components/: _component_camera_control.scss  _component_camera_preview.scss  _component_camera_settings.scss  _component_color_chart.scss  _component_color_profile_curves.scss  _component_color_profile_graph.scss  _component_color_profile_matrix.scss  _component_curve.scss  _component_dynamic_range.scss  _component_form.scss  _component_graphic.scss  _component_graphic_view.scss  _component_image_graph.scss  _component_image_histogram.scss  _component_image_viewer.scss  _component_image_waveform.scss  _component_module.scss  _component_panel.scss  _component_panel_group.scss  _component_panel_tab.scss  _component_panel_tabs.scss  _component_progress_bar.scss  _component_progress_dialog.scss  _component_render.scss  _component_scroll.scss  _component_table.scss  _component_thumbnails.scss  _component_welcome.scss  _component_white_balance_curves.scss  _component_white_balance_patches.scss  _component_window.scss
resources/style/core/: _core_checkbox.scss  _core_combobox.scss  _core_label.scss  _core_lineedit.scss  _core_pushbutton.scss  _core_slider.scss  _core_spinbox.scss
resources/style/dialogs/: _dialog_about.scss  _dialog_register.scss
resources/style/panels/: _panel_camera.scss  _panel_dynamic_range.scss  _panel_image.scss  _panel_image_data.scss  _panel_patches.scss  _panel_profile_curves.scss  _panel_profile_result.scss  _panel_thumbnails.scss
resources/style/variables/: _colors.scss
src/: main.cpp
src/application/: Application.cpp  Application.h
src/application/components/cameraControl/: CameraControlComponent.cpp  CameraControlComponent.h
src/application/components/cameraPreview/: CameraPreviewComponent.cpp  CameraPreviewComponent.h  CameraPreviewComponentImage.cpp  CameraPreviewComponentImage.h
src/application/components/cameraSettings/: CameraSettingsComponent.cpp  CameraSettingsComponent.h
src/application/components/colorChart/: ColorChartComponent.cpp  ColorChartComponent.h
src/application/components/colorProfileCurves/: ColorProfileCurvesComponent.cpp  ColorProfileCurvesComponent.h  ColorProfileCurvesComponentItem.cpp  ColorProfileCurvesComponentItem.h
src/application/components/colorProfileGraph/: ColorProfileGraphComponent.cpp  ColorProfileGraphComponent.h  ColorProfileGraphComponentItem.cpp  ColorProfileGraphComponentItem.h
src/application/components/colorProfileMatrix/: colorProfileMatrixComponent.cpp  colorProfileMatrixComponent.h
src/application/components/curve/: CurveComponent.cpp  CurveComponent.h
src/application/components/dynamicRange/: DynamicRangeComponent.cpp  DynamicRangeComponent.h
src/application/components/form/: FormComponent.cpp  FormComponent.h
src/application/components/graphic/: GraphicComponent.cpp  GraphicComponent.h
src/application/components/graphicView/: GraphicViewComponent.cpp  GraphicViewComponent.h
src/application/components/imageGraph/: ImageGraphComponent.cpp  ImageGraphComponent.h  ImageGraphComponentItem.cpp  ImageGraphComponentItem.h
src/application/components/imageHistogram/: ImageHistogramComponent.cpp  ImageHistogramComponent.h  ImageHistogramComponentItem.cpp  ImageHistogramComponentItem.h
src/application/components/imageViewer/: ImageViewerComponent.cpp  ImageViewerComponent.h  ImageViewerComponentDisplay.cpp  ImageViewerComponentDisplay.h  ImageViewerComponentMenu.cpp  ImageViewerComponentMenu.h
src/application/components/imageWaveform/: ImageWaveformComponent.cpp  ImageWaveformComponent.h  ImageWaveformComponentItem.cpp  ImageWaveformComponentItem.h
src/application/components/module/: ModuleComponent.cpp  ModuleComponent.h
src/application/components/panel/: PanelComponent.cpp  PanelComponent.h
src/application/components/panelGroup/: PanelGroupComponent.cpp  PanelGroupComponent.h
src/application/components/panelTab/: PanelTabComponent.cpp  PanelTabComponent.h
src/application/components/panelTabs/: PanelTabsComponent.cpp  PanelTabsComponent.h
src/application/components/progressBar/: ProgressBarComponent.cpp  ProgressBarComponent.h
src/application/components/progressDialog/: ProgressDialogComponent.cpp  ProgressDialogComponent.h
src/application/components/render/: RenderComponent.cpp  RenderComponent.h
src/application/components/scroll/: ScrollComponent.cpp  ScrollComponent.h
src/application/components/table/: TableComponent.cpp  TableComponent.h
src/application/components/thumbnails/: ThumbnailsComponent.cpp  ThumbnailsComponent.h  ThumbnailsComponentItem.cpp  ThumbnailsComponentItem.h
src/application/components/welcome/: WelcomeComponent.cpp  WelcomeComponent.h
src/application/components/whiteBalanceCurves/: WhiteBalanceCurvesComponent.cpp  WhiteBalanceCurvesComponent.h  WhiteBalanceCurvesComponentItem.cpp  WhiteBalanceCurvesComponentItem.h
src/application/components/whiteBalancePatches/: WhiteBalancePatchesComponent.cpp  WhiteBalancePatchesComponent.h  WhiteBalancePatchesComponentChart.cpp  WhiteBalancePatchesComponentChart.h  WhiteBalancePatchesComponentGain.cpp  WhiteBalancePatchesComponentGain.h
src/application/components/window/: WindowComponent.cpp  WindowComponent.h
src/constants/: ApplicationConstants.h  CameraConstants.h  ColorChartConstants.h  ColorConstants.h  MetamorfozeConstants.h  ResourceConstants.h
src/engine/: Engine.cpp  Engine.h
src/utils/: ArrayUtils.h  BoundingBoxUtils.h  ColorChartDetectionUtils.h  ColorChartGraphUtils.h  ColorChartPreviewUtils.h  ColorChartVisualUtils.h  ColorDistanceUtils.h  ColorSpaceUtils.h  ColorUtils.h  FileUtils.h  ImageExportUtils.h  ImageGraphUtils.h  ImageHistogramUtils.h  ImageImportUtils.h  ImagePreviewUtils.h  ImageSharpenUtils.h  ImageWaveformUtils.h  NumberUtils.h  PixmapUtils.h
(+118 files in other folders)
